--- a/source/_docs/patterns/02-molecules/accordion/accordion.scss
+++ b/source/_docs/patterns/02-molecules/accordion/accordion.scss
@@ -32,6 +32,8 @@ wwu-accordion,
     &:active,
     &:focus,
     &:hover {
+      --oline-color: var(--link-color--focus);
+
       color: var(--link-color--focus);
       outline-offset: var(--outline-offset--inset);
       background: var(--link-background--focus);
