--- a/source/_docs/patterns/02-molecules/announcement/announcement.scss
+++ b/source/_docs/patterns/02-molecules/announcement/announcement.scss
@@ -54,9 +54,6 @@ Molecule: Announcement
 [data-theme="dark"] {
   .wwu-announcement {
     background-color: var(--green);
-    .material-icons {
-      @include green-bg;
-    }
     .body {
       @include green-bg;
     }
