--- a/source/_docs/patterns/02-molecules/switcher/switcher.scss
+++ b/source/_docs/patterns/02-molecules/switcher/switcher.scss
@@ -17,6 +17,8 @@ wwu-switcher {
     &:active,
     &:focus,
     &:hover {
+      --oline-color: var(--link-color--focus);
+
       color: var(--link-color--focus);
       outline-offset: var(--outline-offset--inset);
       background: var(--link-background--focus);
